Updated index.html and styles.css to feature a menu from which users can select an option

--- a/index.html
+++ b/index.html
@@ -8,5 +8,21 @@
 </head>
 <body>
     <h1>Welcome to my Grid Maker! Please experiment by selecting an option and/or selecting a cell.</h1>
+    <div>
+        <button class="div_item">Add Row</button>
+        <button class="div_item">Add Column</button>
+        <button class="div_item">Remove Row</button>
+        <button class="div_item">Remove Column</button>
+        <button class="div_item">Fill All Uncolored</button>
+        <button class="div_item">Fill All</button>
+        <button class="div_item">Clear All Colors</button>
+        <select class="div_item">
+            <option>SELECT COLOR</option>
+            <option>Red</option>
+            <option>Blue</option>
+            <option>Green</option>
+            <option>Yellow</option>
+        </select>
+    </div>
 </body>
 </html>
