Updated scripts.js to contain function to add a column to grid; updated to index.html to provide functionality to add column button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Welcome to my Grid Maker! Please experiment by selecting an option and/or selecting a cell.</h1>
     <div>
         <button onclick="addRow()" class="div_item">Add Row</button>
-        <button class="div_item">Add Column</button>
+        <button onclick="addColumn()" class="div_item">Add Column</button>
         <button class="div_item">Remove Row</button>
         <button class="div_item">Remove Column</button>
         <button class="div_item">Fill All Uncolored</button>
