Updated scripts.js and index.html to contain implementation for the remove row button, which removes a row from the grid

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div>
         <button onclick="addRow()" class="div_item">Add Row</button>
         <button onclick="addColumn()" class="div_item">Add Column</button>
-        <button class="div_item">Remove Row</button>
+        <button onclick="removeRow()" class="div_item">Remove Row</button>
         <button class="div_item">Remove Column</button>
         <button class="div_item">Fill All Uncolored</button>
         <button class="div_item">Fill All</button>
