--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <button onclick="addRow()" class="div_item">Add Row</button>
         <button onclick="addColumn()" class="div_item">Add Column</button>
         <button onclick="removeRow()" class="div_item">Remove Row</button>
-        <button class="div_item">Remove Column</button>
+        <button onclick="removeColumn()" class="div_item">Remove Column</button>
         <button class="div_item">Fill All Uncolored</button>
         <button class="div_item">Fill All</button>
         <button class="div_item">Clear All Colors</button>
