updated index.html and scripts.js to provide functionality for the button that fills all uncolored cells with the selected color

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <button onclick="addColumn()" class="div_item">Add Column</button>
         <button onclick="removeRow()" class="div_item">Remove Row</button>
         <button onclick="removeColumn()" class="div_item">Remove Column</button>
-        <button class="div_item">Fill All Uncolored</button>
+        <button onclick="colorAllUncoloredCells()" class="div_item">Fill All Uncolored</button>
         <button class="div_item">Fill All</button>
         <button class="div_item">Clear All Colors</button>
         <select class="div_item">
