updated index.html and scripts.js to provide functionality for the button that fills all cells with the selected color

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button onclick="removeRow()" class="div_item">Remove Row</button>
         <button onclick="removeColumn()" class="div_item">Remove Column</button>
         <button onclick="colorAllUncoloredCells()" class="div_item">Fill All Uncolored</button>
-        <button class="div_item">Fill All</button>
+        <button onclick="colorAllCells()" class="div_item">Fill All</button>
         <button class="div_item">Clear All Colors</button>
         <select class="div_item">
             <option>SELECT COLOR</option>
