--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <button onclick="removeColumn()" class="div_item">Remove Column</button>
         <button onclick="colorAllUncoloredCells()" class="div_item">Fill All Uncolored</button>
         <button onclick="colorAllCells()" class="div_item">Fill All</button>
-        <button class="div_item">Clear All Colors</button>
+        <button onclick="clearAllCells()" class="div_item">Clear All Colors</button>
         <select class="div_item">
             <option>SELECT COLOR</option>
             <option>Red</option>
