Updated styles.css so that the grid is always centered; updated index.html and scripts.js to cause select color button to change its color to the one selected

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <button onclick="colorAllUncoloredCells()" class="div_item">Fill All Uncolored</button>
         <button onclick="colorAllCells()" class="div_item">Fill All</button>
         <button onclick="clearAllCells()" class="div_item">Clear All Colors</button>
-        <select class="div_item">
+        <select onchange="changeBackground()" class="div_item">
             <option>SELECT COLOR</option>
             <option>Red</option>
             <option>Blue</option>
